# podkit

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  devenv.nix  devenv.yaml  flake.nix  rustfmt.toml
crates/core/src/domain/: mod.rs
crates/core/src/domain/membership/: entity.rs  mod.rs
crates/core/src/domain/project/: entity.rs  repository.rs
crates/core/src/domain/shared/: errors.rs
crates/core/src/domain/team/: entity.rs  mod.rs  repository.rs
crates/core/src/domain/user/: password_hasher.rs
crates/core/src/domain/user/value_objects/: email.rs  password_hash.rs  user_settings.rs
crates/core/src/domain/workspace/: entity.rs  repository.rs
crates/core/src/validation/: email.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: ids.rs  passwords.rs
crates/database/: Cargo.toml
crates/database/migrations/: 0003_add_token_revocations.down.sql  0003_add_token_revocations.up.sql
crates/database/src/: connection.rs  error.rs
crates/database/src/models/: mod.rs  team.rs  token_revocations.rs  user.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
requests/: auth.http  misc.http  resterm.env.example.json
secrets/: db-password.txt
server/: Cargo.toml
server/src/: config.rs  error.rs  main.rs  routes.rs
server/src/auth/: extractor.rs  token.rs
server/src/routes/auth/: login.rs  logout.rs  mod.rs  register.rs
