[workspace]
resolver = "2"
members = ["crates/crypto", "crates/database", "crates/macros", "server"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["chikof"]
license = "AGPL-3.0-or-later"
rust-version = "1.94"

[workspace.dependencies]
tokio = { version = "=1.52.0", features = ["full"] }
thiserror = "=2.0.18"
anyhow = "=1.0.102"
tracing = "=0.1.44"
better-tracing = { version = "=0.6.0", features = ["env-filter"] }
bollard = { version = "=0.20.2", features = [
	"buildkit",
	"chrono",
	"websocket",
] }
time = "=0.3.47"
sqlx = { version = "=0.8.6", features = [
	"runtime-tokio",
	"tls-rustls",
	"macros",
	"postgres",
	"time",
] }
axum = "=0.8.9"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
age = "=0.11.2"
argon2 = "=0.5.3"
zeroize = "=1.8.2"
jsonwebtoken = { version = "=10.3.0", features = ["rust_crypto"] }
tower-cookies = "=0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
forgeconf = { version = "0.5.0" , default-features = false, features = [
	"toml",
	"miette",
	"validators",
] }
dirs = "=6.0.0"

crypto = { path = "./crates/crypto" }
database = { path = "./crates/database" }
macros = { path = "./crates/macros" }


[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
redundant_clone = "deny"
nesdless_collect = "deny"
missing_docs = "deny"
cast_precision_loss = "allow"
