[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true
anyhow.workspace = true

[lints]
workspace = true
