[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sqlx.workspace = true
time.workspace = true
thiserror.workspace = true
crypto.workspace = true
zeroize.workspace = true
anyhow.workspace = true

[lints]
workspace = true
